# MehfilCart

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3c42bcca272b_add_email_and_prep_time_minutes.py  b7f3a9c1d2e4_add_restaurant_locations_postgis.py  f4a8c2e91b3d_add_session_events_audit_log.py
app/: __init__.py
app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  permissions.py  redis.py  security.py
app/models/: __init__.py  base.py  menu.py  name_change_request.py  order.py  restaurant.py  restaurant_location.py  service_action.py  session.py  session_event.py  table.py  user.py
app/routers/: __init__.py  admin.py  auth.py  cart.py  menu.py  orders.py  private.py  service_actions.py  sessions.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  cart.py  location.py  menu.py  order.py  restaurant.py  service_action.py  session.py  user.py
app/services/: __init__.py  admin_service.py  auth_service.py  cart_service.py  location_service.py  menu_service.py  order_service.py  service_action_service.py  session_event_service.py  session_service.py  user_service.py
app/services/geocoding/: __init__.py  base.py  maptiler.py
app/utils/: __init__.py  otp.py  phone.py  qr.py
app/websocket/: __init__.py  events.py  handlers.py  manager.py
docs/: BACKEND_ARCHITECTURE.md
standalone_scripts/: clear_mock_data.py  create_mock_data.py  mock_db_creation.py
