[project]
name = "mehfilcart"
version = "0.2.0"
description = "MehfilCart -- Backend API for a collaborative restaurant ordering platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.129.0",
    "geoalchemy2>=0.15.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qrcode[pil]>=8.2",
    "redis[hiredis]>=7.2.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
